hotfix: 컴파일 오류로 CI 실패 에러 해결